--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@alch/alchemy-web3": "^1.4.6",
+    "@chainlink/contracts": "^0.5.1",
     "@openzeppelin/contracts": "^4.7.3",
     "dotenv": "^16.0.3",
     "next": "^13.0.2",
